--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <div class="container">
      <div class="container">
        <div class="col-sm-12">
-         <img src="DASH_1080.gif" alt="Oops">
+         <img src="-/DASH_1080.gif" alt="Oops">
          <h1>Sorry but this website only supports desktop.</h1>
          <h2>If you think this is a mistake, contact me at testmail.sfgames@gmail.com<h2>
         </div>
